# valorant-ai

./: .gitignore  README.md  pyproject.toml
notebooks/: 09-valorant-treinamento-customizado-yolo.ipynb  12-valorant-inferencia-modelo-treinado.ipynb  nao rodar esse.ipynb
